--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="row">
     <br>
   </div>
-  <div class="bg-primary" style="border-radius: 0px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
+  <div class="bg-dark" style="border-radius: 0px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
 
     <div class="row text-white" style="margin-left: 5px;">
       <div class="col">
