--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 
   <script src="{{ site.baseurl }}/js/jquery-3.3.1.slim.min.js"></script>
   <script src="{{ site.baseurl }}/js/popper.min.js"></script>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/lumen/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/united/bootstrap.css">
 <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
@@ -59,7 +59,7 @@ MathJax.Hub.Config({
 </head>
 <body>
 <div class="container" style="border:1px solid #cecece; background-color: #fdfdfe;">
-  <div class="bg-primary">
+  <div class="bg-dark">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="75" style="margin-top: 4px; margin-right: 15px;"></img>
     <center><h2 style="margin-top: 2px;" class="text-white"> Department of Mathematics </h2></center>
