--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -141,7 +141,7 @@
           <input type="text" class="form-control" placeholder="Search" name="q">
           <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
           <div class="input-group-btn">
-              <button class="btn btn-primary" type="submit"><i class="fa fa-search"></i></button>
+              <button class="btn btn-info" type="submit"><i class="fa fa-search"></i></button>
           </div>
       </div>
       </form>
