--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 
   <script src="{{ site.baseurl }}/js/jquery-3.3.1.slim.min.js"></script>
   <script src="{{ site.baseurl }}/js/popper.min.js"></script>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/lumen/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/yeti/bootstrap.min.css">
 <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
