--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -138,7 +138,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0" action="https://www.google.com/search">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <button class="btn btn-info my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
     </form>
   
   </div>
