--- a/extras.css
+++ b/extras.css
@@ -115,6 +115,10 @@ a.bangalore-probability-seminar:focus {
      margin-bottom: 0;
 }*/
 
+.carousel-item {
+  height: 280px;
+}
+
 body {
     padding-top: 20px;
   }
@@ -128,3 +132,4 @@ code {
   color: #2c3e50;
   background-color: white;
 }
+
