--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -26,16 +26,19 @@ href="{% if page.website %}{{ page.website }}#{{ page.date | date: "%Y-%m-%d" }}
 {% for lecture in page.lectures %}
 {% assign counter=counter | plus: 1 %}
 <hr />
-  {% if lecture.slides %}
   <div>
+  {% if lecture.slides %}
   <a href="{{ site.baseurl }}/seminar-slides/{{ page.date | date: "%Y" }}/{{ lecture.slides }}" target="_blank" class="pull-right btn btn-info">Slides</a>
   {% endif %}
 <h5><strong> Lecture {{ counter }}: </strong> {{ lecture.title }}</h5>
-  <h5><strong> Abstract: </strong></h5> <p>{{ lecture.abstract }}</p>
+  {% if lecture.abstract %}<h5><strong> Abstract: </strong></h5> <p>{{ lecture.abstract }}</p>{% endif %}
 </div>
 {% endfor %}
 {% endif %}
+<hr />
+  <div>
     {{ page.content }}
+  </div>
   </div>
 
 </div>
