collaboration graph, with urls

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl }}/research-areas.html">Research Areas</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/pubs.html">All Publications</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/pubs-by-author.html">Faculty Publications (by author)</a> </li>
+          <li><a class="dropdown-item" href="{{ site.baseurl }}/collab.html">Research Landscape</a> </li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/academic-reports.html">Academic Review Reports</a> </li>
         </ul>
       </li>
