--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -111,7 +111,7 @@
         <ul class="dropdown-menu" aria-labelledby="resourcesDropdown">
           <li><a class="dropdown-item" href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
           <li> <a class="dropdown-item" href="http://acadserver.admin.iisc.ac.in/course/" target="_blank">IISc Course Registration </a></li>
-          <li><a class="dropdown-item" href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
+          <li><a class="dropdown-item" href="https://mathscinet.ams.org/mathscinet/search/" target="_blank">MathSciNet</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
           <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li>
           <li> <a class="dropdown-item" href="http://www.iisc.ac.in/wp-content/uploads/2018/02/change_of_Important_Email_IDs.pdf" target="_blank">Changed E-mails (at IISc)</a> </li>
