course timings, venues

--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -7,7 +7,7 @@
       <td  class="text-center"><b>Instructor</b></td>
       <td  class="text-center"><b>Prerequisites</b></td>
       <td style="white-space: pre;"><b>Additional
-Prerequisites for
+Prereqs for
 Undegraduates</b></td>
       <td  class="text-center"><b>Timing</b></td>
       <td  class="text-center"><b>Venue</b></td>
