--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -99,7 +99,7 @@
     <li> <a class="dropdown-item" href="{{ site.baseurl }}/thesis.html">Thesis colloquium/defence</a> </li>
     <li> <a class="dropdown-item" href="http://www.math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
     <li> <a class="dropdown-item" href="http://www.math.iisc.ac.in/~khare/algcomb19-20.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
-    <li> <a class="dropdown-item" href="http://www.math.iisc.ac.in/~vvdatar/gt_2019_Fall.html" target="_blank">Geometry & Topology Seminar</a> </li>
+    <li> <a class="dropdown-item" href="http://www.math.iisc.ac.in/~vvdatar/gt_2020_Spring.html" target="_blank">Geometry & Topology Seminar</a> </li>
     <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/~aprg/index.php?id=seminar19-20">APRG Seminar</a>
     <li><a class="dropdown-item" href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
 </ul>
