--- a/_includes/earlier-semesters.html
+++ b/_includes/earlier-semesters.html
@@ -2,6 +2,7 @@
     <p style="margin-top: 40px">
         <h2>Other semesters</h2>
         <ul>
+            <li><a href="courses2019-20.html"> Academic Year 2019-20</a></li>
             <li><a href="courses2018-19.html"> Academic Year 2018-19</a></li>
             <li><a href="courses2017-18.html"> Academic Year 2017-18</a></li>
             <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
