--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,4 +1,5 @@
 
+<div class="table-responsive">
 <table class="table table-bordered">
 
 <tr><td colspan="8" class="text-center"><h3> Core for Int. Ph.D. 1st year and UG 3rd year </h3></td>
@@ -34,3 +35,4 @@
 
 
 </table>
+</div>
