many links to intranet

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -57,6 +57,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/exam-schedule-dec-2019.html">Final Examination Schedule</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/catalogue.html">Catalogue</a></li>
+          <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc Intranet</a></li>
           <hr/>
           <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMMES</strong></font> </li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Programme</a></li>
@@ -111,6 +112,7 @@
         <ul class="dropdown-menu" aria-labelledby="resourcesDropdown">
           <li><a class="dropdown-item" href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
           <li> <a class="dropdown-item" href="http://acadserver.admin.iisc.ac.in/course/" target="_blank">IISc Course Registration </a></li>
+          <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc Intranet</a></li>
           <li><a class="dropdown-item" href="https://mathscinet.ams.org/mathscinet/search/" target="_blank">MathSciNet</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
           <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li>
