--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -57,7 +57,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/exam-schedule-dec-2019.html">Final Examination Schedule</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/catalogue.html">Catalogue</a></li>
-          <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc Intranet</a></li>
+          <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/MA">Mathematics Intranet</a></li>
           <hr/>
           <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMMES</strong></font> </li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Programme</a></li>
