--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -8,7 +8,7 @@
 <h4>Prerequisite courses: {{ page.prereq-courses }} </h4>
 {% endif %}
 {% if page.ug-prereq-courses %}
-<h4>{% if page.prereq-courses %}(Additional ){% endif %}Prerequisite courses for Undegraduates: {{ page.ug-prereq-courses }} </h4>
+<h4>{% if page.prereq-courses %}(Additional ){% endif %}Prerequisite courses for Undergraduates: {{ page.ug-prereq-courses }} </h4>
 {% endif %}
 {% if page.prereqs %}
 <h4> Pre-requisites : </h4>
