--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -132,6 +132,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
           <li><a class="dropdown-item" href="https://sap.iisc.ac.in" target="_blank">IISc SAP S/4 HANA</a> </li>
           <li><a class="dropdown-item" href="http://iams.admin.iisc.ernet.in/" target="_blank">IAMS</a></li>
+          <li><a class="dropdown-item" href="https://samadhan.iisc.ac.in/">Samadhan</a></li>
           <hr/>
           <li><a class="dropdown-item" href="{{site.baseurl}}/opportunities.html">Opportunities</a></li>
         </ul>
