--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,6 +41,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl }}/phd-alumni.html">Ph.D.</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/ug-alumni.html">Undergraduate </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/fac-alumni.html">Faculty </a></li>
+          <li><a class="dropdown-item" href="{{ site.baseurl }}/postdoc-alumni.html">Postdocs, Inspire Faculty</a></li>
           <hr/>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/staff.html">Staff</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/trainees.html">Project Staff</a></li>
