--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -96,7 +96,8 @@
   News & Events <span class="caret"></span></a>
 <ul class="dropdown-menu" aria-labelledby="eventsDropdown">
   <li><a class="dropdown-item" href="{{ site.baseurl }}/seminars-all.html">Seminars</a></li>
-    <li><a class="dropdown-item" href="{{ site.baseurl }}/news.html">News</a></li>
+    <li><a class="dropdown-item" href="{{ site.baseurl }}/news.html">News & Announcements</a></li>
+    <li><a class="dropdown-item" href="{{ site.baseurl }}/events.html">Events</a></li>
     <hr/>
     <li> <a class="dropdown-item" href="{{ site.baseurl }}/eigenfunctions-seminar.html">Eigenfunctions Seminars</a> </li>
     <li> <a class="dropdown-item" href="{{ site.baseurl }}/thesis.html">Thesis colloquium/defence</a> </li>
