--- a/_includes/seminar-table.html
+++ b/_includes/seminar-table.html
@@ -25,6 +25,7 @@
 <div class="" id = "tables">
   <h4>For year:</h4>
   <ul>
+    <li><a href="Seminars2021.html">2021</a></li>
     <li><a href="Seminars2020.html">2020</a></li>
     <li><a href="Seminars2019.html">2019</a></li>
     <li><a href="Seminars2018.html">2018</a></li>
