more purging with ernet links

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -122,7 +122,7 @@
           <li> <a class="dropdown-item" href="http://www.iisc.ac.in/wp-content/uploads/2018/02/change_of_Important_Email_IDs.pdf" target="_blank">Changed E-mails (at IISc)</a> </li>
           <hr/>
           <li><a class="dropdown-item" href="http://math.iisc.ac.in/~library/" target="_blank">Mathematics Library</a></li>
-          <li> <a class="dropdown-item" href="http://www.math.iisc.ernet.in/~library/nbhm.html" target="_blank">NBHM Regional Library</a> </li>
+          <li> <a class="dropdown-item" href="http://math.iisc.ac.in/~library/nbhm.html" target="_blank">NBHM Regional Library</a> </li>
           <li><a class="dropdown-item" href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
           <li><a class="dropdown-item" href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
          <!--<li><a class="dropdown-item" href="http://math.iisc.ac.in/~opportunities/" target="_blank"> Opportunities </a></li>-->
