chair and committees linked

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,6 +24,8 @@
         <a class="nav-link dropdown-toggle" href="#" id="peopleDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           People <span class="caret"></span></a>
         <ul class="dropdown-menu" aria-labelledby="peopleDropdown">
+          <li><a class="dropdown-item" href="{{ site.baseurl }}/committees.html">Chair & Committees </a></li>
+          <hr/>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/faculty.html">Faculty </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/emsci.html">Emeritus Scientists </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/nmi-dist.html">NMI Distinguished Associates </a></li>
