--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -4,7 +4,7 @@
     {%assign finish = start | date : '%s' | plus: 3600  %}
     {% capture timing %}{{ start | date: "%Y%m%dT%H%M%S" }}/{{ finish | date: "%Y%m%dT%H%M%S" }}{% endcapture %}
     {% capture fulltitle %}{{ page.speaker }} : {{ page.title}}{% endcapture %}
-    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{fulltitle | uri_escape }}&dates={{ timing }}&ctz=Asia/Calcutta" target="blank" class="pull-right btn btn-primary">Add to Google calendar</a>
+    <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text={{fulltitle | uri_escape }}&dates={{ timing }}&ctz=Asia/Calcutta" target="blank" class="pull-right btn btn-info">Add to Google calendar</a>
 {% if page.series %}<h4><a
 href="{% if page.website %}{{ page.website }}#{{ page.date | date: "%Y-%m-%d" }}{% else %}{{ site.baseurl }}/{{ page.series | slugify }}.html#{{ page.date | date: "%Y-%m-%d" }}-{{ page.speaker | slugify }}{% endif %}" class="{{ page.series | slugify }}"
 >{{ page.series-prefix }} {{page.series}} {{ page.series-suffix }} </a></h4>{% endif %}
