updated examination schedule

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -59,7 +59,7 @@
           <li class="dropdown-header"> <font color="#000000"><strong>COURSES</strong></font> </li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/course-list.html">Current & Upcoming</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
-          <li><a class="dropdown-item" href="{{ site.baseurl }}/exam-schedule-jan-2021.html">Final Examination Schedule</a></li>
+          <li><a class="dropdown-item" href="{{ site.baseurl }}/exam-schedule-june-2021.html">Final Examination Schedule</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/catalogue.html">Catalogue</a></li>
           <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/MA">Mathematics Intranet</a></li>
           <hr/>
