link filename corrected

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -132,7 +132,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl }}/contact-us.html"> Contact Us </a></li>
           <hr/>
           <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong></font> </li>
-          <li><a class="dropdown-item" href="{{site.baseurl}}/comprehensive-report-templates">Comprehensive Report Templates</a> </li>
+          <li><a class="dropdown-item" href="{{site.baseurl}}/comprehensive-report-templates.html">Comprehensive Report Templates</a> </li>
           <li><a class="dropdown-item" href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
 
           <li><a class="dropdown-item" href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
