number theory aquamarine

--- a/extras.css
+++ b/extras.css
@@ -57,7 +57,7 @@ a.geometry-topology-seminar:focus {
 
 a.number-theory-seminar:hover,
 a.number-theory-seminar:focus {
-  color: black;
+  color: #0437F2;
   text-decoration: underline;
 }
 
