--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -128,6 +128,7 @@
           <li><a class="dropdown-item" href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
           <li><a class="dropdown-item" href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
          <!--<li><a class="dropdown-item" href="http://math.iisc.ac.in/~opportunities/" target="_blank"> Opportunities </a></li>-->
+         <li><a class="dropdown-item" href="{{ site.baseurl }}/committees.html">Chair & Committees </a></li>
          <li><a class="dropdown-item" href="{{ site.baseurl }}/office_2017aug.pdf" target="_blank">Offices and Phone Numbers</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/contact-us.html"> Contact Us </a></li>
           <hr/>
