--- a/_includes/header-base.html
+++ b/_includes/header-base.html
@@ -36,7 +36,7 @@
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
 
-  <link rel="stylesheet" href="{{ site.baseurl}}/standalone.css">
+  <link rel="stylesheet" href="{{ site.baseurl}}/{{ page.css }}.css">
 
 
   <script type="text/javascript" async
@@ -69,6 +69,3 @@ MathJax.Hub.Config({
 
 </head>
 <body>
-<div class="container">
-
-  <p>&nbsp;</p>
