--- a/_includes/header-base.html
+++ b/_includes/header-base.html
@@ -36,7 +36,7 @@
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
 
-  <link rel="stylesheet" href="{{ site.baseurl}}/{{ page.css }}.css">
+  <link rel="stylesheet" href="{{ page.css }}.css">
 
 
   <script type="text/javascript" async
