Updated Prof S. Thangavelu Symposium

--- a/thangavelufest/thangavelu-fest.css
+++ b/thangavelufest/thangavelu-fest.css
@@ -1,14 +1,14 @@
 body {
-    background-color: #002b36;
-    color: white;
+    background-color: #FFFFF;
+    color: black;
 }
 
 a {
-    color: lightgoldenrodyellow;
+    color: blue;
 }
 
 a:hover,
 a:focus {
-    color: lightgoldenrodyellow;
+    color: blue;
     text-decoration: underline;
 }
