--- a/thangavelufest/thangavelu-fest.css
+++ b/thangavelufest/thangavelu-fest.css
@@ -12,3 +12,16 @@ a:focus {
     color: blue;
     text-decoration: underline;
 }
+.gold {
+    color: lightgoldenrodyellow;
+}
+
+.table-dark {
+    background-color: teal !important;
+}
+
+.table-dark th, .table-dark td, .table-dark thead th {
+    border-color: lightgoldenrodyellow !important;
+}
+
+
