--- a/adamkoranyibirthday/ak-fest.css
+++ b/adamkoranyibirthday/ak-fest.css
@@ -12,4 +12,15 @@ a:focus {
     color: blue;
     text-decoration: underline;
 }
+.gold {
+    color: lightgoldenrodyellow;
+}
+
+.table-dark {
+    background-color: teal !important;
+}
+
+.table-dark th, .table-dark td, .table-dark thead th {
+    border-color: lightgoldenrodyellow !important;
+}
 
