--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,6 +27,7 @@
           <li><a class="dropdown-item" href="{{ site.baseurl }}/committees.html">Chair & Committees </a></li>
           <hr/>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/faculty.html">Faculty </a></li>
+	  <li><a class="dropdown-item" href="{{ site.baseurl }}/honorary-faculty.html">Honorary Faculty </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/nmi-dist.html">NMI Distinguished Associates </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young Scientists</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/postdocs.html">Postdocs</a></li>
