--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -108,7 +108,8 @@
     <li> <a class="dropdown-item" href="http://www.math.iisc.ac.in/~khare/algcomb20-23.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
     <li> <a class="dropdown-item" href="{{ site.baseurl }}/geometry-topology-seminar.html">Geometry & Topology Seminar</a> </li>
     <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/~aprg/index.php?id=seminar22-23">APRG Seminar</a>
-    <li><a class="dropdown-item" href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
+    <li><a class="dropdown-item" href="https://iiscmathstudentseminars.wordpress.com/" target="_blank">Student Seminars</a></li>
+    <li><a class="dropdown-item" href="https://stgsiisc.github.io/" target="_blank">Students' Topology & Geometry Seminars</a> </li>
 </ul>
 </li>
 
