--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,6 +30,7 @@
 	  <li><a class="dropdown-item" href="{{ site.baseurl }}/honorary-faculty.html">Honorary Faculty </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/nmi-dist.html">NMI Distinguished Associates </a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/inspire.html">Inspire Fellows/DST Young Scientists</a></li>
+          <li><a class="dropdown-item" href="{{ site.baseurl }}/instructors.html">Instructors</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/postdocs.html">Postdocs</a></li>
           <hr/>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/visitors.html">Visitors</a></li>
