--- a/_includes/header-base.html
+++ b/_includes/header-base.html
@@ -36,8 +36,9 @@
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
 
+  {% if page.css %}
   <link rel="stylesheet" href="{{ page.css }}.css">
-
+  {% endif %}
 
   <script type="text/javascript" async
     src="{{ site.baseurl }}/MathJax/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -48,8 +49,8 @@
 MathJax.Hub.Config({
   jax: ["input/TeX", "output/HTML-CSS"],
   tex2jax: {
-    inlineMath: [ ['$', '$'] ],
-    displayMath: [ ['$$', '$$']],
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    displayMath: [['$$', '$$'], ['\\[', '\\]']],
     processEscapes: true,
     skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
   },
