and/or for core

--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -2,7 +2,7 @@
 <div class="table-responsive">
 <table class="table table-bordered">
 
-<tr><td colspan="8" class="text-center"><h3> Core for Int. Ph.D. 1st year and UG 3rd year </h3></td>
+<tr><td colspan="8" class="text-center"><h3> Core for Int. Ph.D. 1st year and/or UG 3rd year </h3></td>
 
 </tr>
 {% assign list = semester.core1 %}
