--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -126,7 +126,7 @@
           <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc Intranet</a></li>
           <li><a class="dropdown-item" href="https://mathscinet.ams.org/mathscinet/search/" target="_blank">MathSciNet</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
-          <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li>
+          <!-- <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li> -->
           <li> <a class="dropdown-item" href="http://www.iisc.ac.in/wp-content/uploads/2018/02/change_of_Important_Email_IDs.pdf" target="_blank">Changed E-mails (at IISc)</a> </li>
           <hr/>
           <li><a class="dropdown-item" href="https://math.iisc.ac.in/~library/" target="_blank">Mathematics Library</a></li>
@@ -142,9 +142,8 @@
           <li><a class="dropdown-item" href="{{site.baseurl}}/TAform.docx">TA form</a> </li>
           <li><a class="dropdown-item" href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
 
-          <li><a class="dropdown-item" href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
+          <!-- <li><a class="dropdown-item" href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li> -->
           <li><a class="dropdown-item" href="https://sap.iisc.ac.in" target="_blank">IISc SAP S/4 HANA</a> </li>
-          <li><a class="dropdown-item" href="http://iams.admin.iisc.ernet.in/" target="_blank">IAMS</a></li>
           <li><a class="dropdown-item" href="https://samadhan.iisc.ac.in/">Samadhan</a></li>
           <hr/>
           <li><a class="dropdown-item" href="{{site.baseurl}}/opportunities.html">Opportunities</a></li>
