--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -123,7 +123,7 @@
         <ul class="dropdown-menu" aria-labelledby="resourcesDropdown">
           <li><a class="dropdown-item" href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
           <li> <a class="dropdown-item" href="http://acadserver.admin.iisc.ac.in/course/" target="_blank">IISc Course Registration </a></li>
-          <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc Intranet</a></li>
+          <!-- <li><a class="dropdown-item" href="https://indianinstituteofscience.sharepoint.com/sites/Academics/Pages/Departments.aspx">IISc Intranet</a></li> -->
           <li><a class="dropdown-item" href="https://mathscinet.ams.org/mathscinet/search/" target="_blank">MathSciNet</a></li>
           <li><a class="dropdown-item" href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
           <!-- <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li> -->
