--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -113,6 +113,7 @@
     <li><a class="dropdown-item" href="http://www.math.iisc.ac.in/~aprg/index.php?id=seminar23-24">APRG Seminar</a>
     <li><a class="dropdown-item" href="https://iiscmathstudentseminars.wordpress.com/" target="_blank">Student Seminars</a></li>
     <li><a class="dropdown-item" href="https://stgsiisc.github.io/" target="_blank">Students' Topology & Geometry Seminars</a> </li>
+    <li> <a class="dropdown-item" href="{{ site.baseurl }}/promys-seminar.html">Promys Guest lectures</a> </li>
     <li><a class="dropdown-item" href="https://sites.google.com/view/cultofcategoriesandtypes?usp=sharing" target="_blank">"Cult of Categories" seminar</a> </li>
 </ul>
 </li>
